Modificacion de property para todos los casos de vivienda

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,9 @@ spring.h2.console.path=/h2-console
 # Ruta relativa desde la raiz del proyecto
 app.csv.path=db/Housing.csv
 app.reviews.csv.path=db/Reviews.csv
+#app.populate-on-start=false
+app.populate-on-start=true
+
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
